--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,25 @@
     <artifactId>elasticsearch-test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch -->
-    <!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch -->
     <dependency>
-        <groupId>org.elasticsearch</groupId>
-        <artifactId>elasticsearch</artifactId>
-        <version>2.3.3</version>
+        <groupId>org.elasticsearch.client</groupId>
+        <artifactId>rest</artifactId>
+        <version>5.0.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.7</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.7</version>
+    </dependency>
+    <dependency>
+        <groupId>com.bilin.lib</groupId>
+        <artifactId>bilin-sdk</artifactId>
+        <version>1.2.1-SNAPSHOT</version>
     </dependency>
 </dependencies>
 
